--- a/style.css
+++ b/style.css
@@ -117,8 +117,15 @@ text-decoration: underline;
     font-size: 1rem;
 } 
 
+.bg-desktop{
+    display: none; 
+}
+
 @media(min-width: 1000px) {
-        header{
+body{
+    display: flex;
+}
+    header{
             background: none;
             justify-content: flex-start;
             padding-inline: 7rem;
@@ -132,6 +139,14 @@ text-decoration: underline;
             padding-inline: 7rem;
         }
 
+        .bg-desktop{
+            display: block;
+            width: 100%;
+        }
+
+        .conteudo{
+            width: 100%;
+        }
 
 }
 
