--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --gray-600:#475569;
     --gray-800:#1e293b;
     --purple:#7c3aed;
+    --light-purple:#9f67ff;
     --white:#fff;
     
 }
@@ -107,6 +108,12 @@ text-decoration: underline;
 
 }
 
+.login button:hover{
+    background: var(--light-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .login > p{
     color: var(--gray-600);
 
@@ -149,7 +156,20 @@ body{
 
         .conteudo{
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
+        .descricao h1{
+            font-size: 2.25rem;
+        }
+
+        .descricao p{
+            font-size: 1rem;
+        }
+
+
 
 }
 
