--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ text-decoration: underline;
 @media(min-width: 1000px) {
 body{
     display: flex;
+    height: 100vh;
 }
     header{
             background: none;
@@ -152,6 +153,12 @@ body{
         .bg-desktop{
             display: block;
             width: 100%;
+        }
+
+        .bg-desktop img{
+            width: 100%;
+            height: 100%;
+            display: block;
         }
 
         .conteudo{
